RON : 18/09/2014 : Alerts spill over,Also UI fixes
git-svn-id: https://10.24.239.14:5511/svn/Engage@1643 f308e16d-57e9-4fa7-a310-9aba3baf408f

--- a/Portals/trunk/EngagePortal/EngagePortal/public_html/oracle/webcenter/portalapp/skins/card-portal-business-skin.css
+++ b/Portals/trunk/EngagePortal/EngagePortal/public_html/oracle/webcenter/portalapp/skins/card-portal-business-skin.css
@@ -1171,6 +1171,14 @@ font-style:normal;
     margin-bottom:3px;
 }
 
+.vertical_seprator_alerts{
+    width:1px !important;
+    height:80px !important;
+    background-color:#C3C3C3 !important;
+    margin-left: -15px!important;
+    margin-top: 20px;
+    margin-bottom:3px;
+}
 
 .vertical_seperator_transaction{
     width:1px !important;
