--- a/Portals/trunk/EngagePortal/EngagePortal/public_html/oracle/webcenter/portalapp/skins/card-portal-private-skin.css
+++ b/Portals/trunk/EngagePortal/EngagePortal/public_html/oracle/webcenter/portalapp/skins/card-portal-private-skin.css
@@ -1419,6 +1419,15 @@ font-style:normal;
     margin-bottom:3px;
 }
 
+.vertical_seprator_alerts{
+    width:1px !important;
+    height:80px !important;
+    background-color:#C3C3C3 !important;
+    margin-left: -15px!important;
+    margin-top: 20px;
+    margin-bottom:3px;
+}
+
 .vertical_seprator_user_display{
     width:1px !important;
     height:120px !important;
